--- a/postare/view/css/normalsize/admin.css
+++ b/postare/view/css/normalsize/admin.css
@@ -10,6 +10,9 @@ html
     	display: none;
 	}
         body{
+			display: flex;
+			flex-direction: column;
+			min-height: 100vh;
 			margin:0;
     		padding:0;
     		background-size: auto;
