--- a/postare/view/css/normalsize/footer.css
+++ b/postare/view/css/normalsize/footer.css
@@ -3,7 +3,8 @@ footer{
     display: flex;
     padding-bottom: 1em;
     color: whitesmoke;
-    margin-top:3%;
+    /* margin-top:3%; */
+    margin-top:auto;
     
    
 }
