--- a/postare/view/css/normalsize/home.css
+++ b/postare/view/css/normalsize/home.css
@@ -13,6 +13,9 @@ html::-webkit-scrollbar
 body
 {
    /* background-color: #fbeeac; */
+   display: flex;
+   flex-direction: column;
+   min-height: 100vh;
     margin:0;
     padding:0;
     background-size: auto;
