--- a/postare/view/css/normalsize/profile.css
+++ b/postare/view/css/normalsize/profile.css
@@ -13,6 +13,9 @@ html::-webkit-scrollbar
 body
 {
    /* background-color: #fbeeac; */
+   display: flex;
+   flex-direction: column;
+   min-height: 100vh;
     margin:0;
     padding:0;
     background-size: auto;
@@ -37,7 +40,7 @@ body
 /* navigation bar  */
 
   /* imagine + upload */
-  .profile
+  .profile 
   {
     display:flex;
     flex-direction: column;
@@ -46,7 +49,7 @@ body
     width: 250px;
     height: 250px;
     object-fit: contain;
-    margin:20px;
+    /* margin:20px; */
   }
   .profile input{
     margin-left: 20px;
