--- a/postare/view/css/normalsize/navbar.css
+++ b/postare/view/css/normalsize/navbar.css
@@ -87,3 +87,16 @@
     display: flex;
     flex-direction: column;
   }
+  select,option,button{
+
+    background-image: linear-gradient(to right top, #ff2e63, #fe5b90, #f67fb5, #ea9ecf, #e0bade);
+    color:black;
+    text-transform: uppercase;
+    outline: 0;
+    width: 120px;
+    height: 48px;
+    padding:0%;
+    cursor: pointer;
+    transition:all 0.2s;
+    border:none;
+}
